vivado/new214/NAO/proj_extr_.Craftsrccube.c_make_cube_faces_with_main.c/sol/sol.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [HLS 200-10] Adding design file 'extr_.Craftsrccube.c_make_cube_faces_with_main.c' to the project
INFO: [HLS 200-10] Setting target device to 'xc7k160t-fbg484-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.Craftsrccube.c_make_cube_faces_with_main.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from extr_.Craftsrccube.c_make_cube_faces_with_main.c:1:
extr_.Craftsrccube.c_make_cube_faces_with_main.c:62:12: warning: initializing 'float *' with an expression of type 'volatile float *' discards qualifiers [-Wincompatible-pointer-types]
    float *d = data;
           ^   ~~~~
extr_.Craftsrccube.c_make_cube_faces_with_main.c:92:11: error: expected identifier or '('
  float (*)[4] ao;
          ^
extr_.Craftsrccube.c_make_cube_faces_with_main.c:93:11: error: expected identifier or '('
  float (*)[4] light;
          ^
extr_.Craftsrccube.c_make_cube_faces_with_main.c:110:25: error: use of undeclared identifier 'ao'
  make_cube_faces(data, ao, light, left, right, top, bottom, front, back, wleft, wright, wtop, wbottom, wfront, wback, x, y, z, n);
                        ^
1 warning and 3 errors generated.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.Craftsrccube.c_make_cube_faces_with_main.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from extr_.Craftsrccube.c_make_cube_faces_with_main.c:1:
extr_.Craftsrccube.c_make_cube_faces_with_main.c:62:12: warning: initializing 'float *' with an expression of type 'volatile float *' discards qualifiers [-Wincompatible-pointer-types]
    float *d = data;
           ^   ~~~~
extr_.Craftsrccube.c_make_cube_faces_with_main.c:92:11: error: expected identifier or '('
  float (*)[4] ao;
          ^
extr_.Craftsrccube.c_make_cube_faces_with_main.c:93:11: error: expected identifier or '('
  float (*)[4] light;
          ^
extr_.Craftsrccube.c_make_cube_faces_with_main.c:110:25: error: use of undeclared identifier 'ao'
  make_cube_faces(data, ao, light, left, right, top, bottom, front, back, wleft, wright, wtop, wbottom, wfront, wback, x, y, z, n);
                        ^
1 warning and 3 errors generated.
INFO: [HLS 200-10] Creating and opening project '/home/vivado/HLStools/vivado/new214/proj_extr_.darknetsrcimage.c_draw_box_with_main.c'.
INFO: [HLS 200-10] Creating and opening solution '/home/vivado/HLStools/vivado/new214/proj_extr_.darknetsrcimage.c_draw_box_with_main.c/sol'.
